# squeegeo

./: .gitignore  README.md  pyproject.toml
squeegeo/: __init__.py
